# faktory-rust

./: Cargo.toml  README.md
examples/: jobs.rs  simple.rs  with_password.rs
src/: consumer.rs  lib.rs  producer.rs
src/protocol/: client.rs  commands.rs  connection.rs  frame.rs  job.rs  mod.rs  responses.rs
