[package]
name = "faktory_async"
version = "0.1.0"
authors = ["norlen"]
edition = "2018"

[dependencies]
atoi = "0.3"
bytes = "0.5"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
thiserror = "1.0"
tokio = { version = "0.2", features = ["rt-core", "tcp"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["full", "test-util"] }
